<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.github.heartinfei.superlog.MainActivity">

    <Button
        android:id="@+id/btn_print"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_margin="16dp"
        android:text="@string/print" />

    <Button
        android:id="@+id/btnThreadInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_margin="16dp"
        android:text="@string/print_thread_info" />

    <Button
        android:id="@+id/btnCustomTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_margin="16dp"
        android:text="@string/print_with_custom_tag" />

    <Button
        android:id="@+id/btnStackInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_margin="16dp"
        android:text="@string/print_track_info" />

</LinearLayout>
