<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.github.heartinfei.superlog.MainActivity">

    <Button
        android:id="@+id/btn_print"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="onClick"
        android:text="@string/print_normal" />

    <Button
        android:id="@+id/btn_thread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="onClick"
        android:text="@string/print_in_thread" />

    <Button
        android:id="@+id/btn_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="onClick"
        android:text="@string/print_with_temp_tag" />

</LinearLayout>
